# PromptPop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
design/: PromptPop_0.0.1.pen
docs/: design.md
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-template.rgba
src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs
src/lib/: api.ts  i18n.ts  platform.ts  starter-snippets.ts  types.ts
