[package]
name = "promptpop"
version = "0.0.1"
description = "A local-first desktop prompt launcher"
authors = ["PromptPop"]
edition = "2021"
license = "MIT"

[lib]
name = "promptpop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
